--- a/js-easy/dom/index.html
+++ b/js-easy/dom/index.html
@@ -1,12 +1,32 @@
 <!DOCTYPE html>
 <html lang="ja">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DOM</title>
-  </head>
-  <body>
-    <script src="./main.js"></script>
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta
+            http-equiv="X-UA-Compatible"
+            content="IE=edge"
+        />
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1.0"
+        />
+        <title>DOM API</title>
+    </head>
+    <body>
+        <!--<button onclick="renewCountUp()">
+            count up
+        </button>
+        <p id="renewNum"></p>-->
+        <h2>FizzBuzzゲーム</h2>
+        <p id="renewNum"></p>
+        <button onclick="fiz()">fizz</button>
+        <button onclick="buz()">buzz</button>
+        <button onclick="fizbuz()">
+            fizzbuzz
+        </button>
+        <button onclick="renewCountUp()">
+            Number
+        </button>
+        <script src="./main.js"></script>
+    </body>
 </html>
