--- a/js-hard/sinkeisuizyaku/index.html
+++ b/js-hard/sinkeisuizyaku/index.html
@@ -11,13 +11,9 @@
     <h1>神経衰弱ゲーム</h1>
     <div id="panel"></div>
 
-    <!-- チャレンジ問題 -->
-
-    <!-- <p id="nextPlayer"></p>
-<p id="player1Point"></p>
-<p id="player2Point"></p> -->
-
-    <!-- チャレンジ問題 ここまで -->
+    <p id="nextPlayer"></p>
+    <p id="player1Point"></p>
+    <p id="player2Point"></p>
 
     <script src="./main.js"></script>
   </body>
