--- a/js-hard/bingosheet/index.html
+++ b/js-hard/bingosheet/index.html
@@ -9,6 +9,6 @@
   <body>
     <table id="view"></table>
     <button id="hitNum">セット</button>
-    <script src="./main.js"></script>
+    <script src="./main2.js"></script>
   </body>
 </html>
