--- a/js-hard/sinkeisuizyaku/index.html
+++ b/js-hard/sinkeisuizyaku/index.html
@@ -15,6 +15,6 @@
     <p id="player1Point"></p>
     <p id="player2Point"></p>
 
-    <script src="./main.js"></script>
+    <script src="./main2.js"></script>
   </body>
 </html>
