--- a/js-hard/slotomachine_2/index.html
+++ b/js-hard/slotomachine_2/index.html
@@ -13,11 +13,11 @@
 	<div class="slot-wrap">
 		<!-- 追加チャレンジ問題 -->
 
-		<!-- <div class="slot upper-slot">
-            <p id="nowTime4"></p>
-            <p id="nowTime5"></p>
-            <p id="nowTime6"></p>
-        </div> -->
+		<div class="slot upper-slot">
+			<p id="nowTime4"></p>
+			<p id="nowTime5"></p>
+			<p id="nowTime6"></p>
+		</div>
 
 		<!-- 追加チャレンジ問題 ここまで -->
 
@@ -29,11 +29,11 @@
 
 		<!-- 追加チャレンジ問題 -->
 
-		<!-- <div class="slot downer-slot">
-            <p id="nowTime7"></p>
-            <p id="nowTime8"></p>
-            <p id="nowTime9"></p>
-        </div> -->
+		<div class="slot downer-slot">
+			<p id="nowTime7"></p>
+			<p id="nowTime8"></p>
+			<p id="nowTime9"></p>
+		</div>
 
 		<!-- 追加チャレンジ問題 ここまで -->
 	</div>
@@ -43,7 +43,7 @@
 		<input type="button" name="" id="setTime3" value="ストップ">
 		<input type="button" id="startTimer" value="スタート"></input>
 	</form>
-	<script src="./main2.js"></script>
+	<script src="./main.js"></script>
 </body>
 
 </html>
