--- a/js-normal/changePassword/index.html
+++ b/js-normal/changePassword/index.html
@@ -10,7 +10,7 @@
         <p id="nowPassword"></p>
         <label>現在のパスワード<input type="text" value="" id="confirmPassword"></label>
         <label>新しいパスワード<input type="text" value="" id="newPassword"></label>
-        <input type="button" id="setPassword" value="変更"></input>
+        <input type="button" id="setPasswordBtn" value="変更"></input>
     </form>
     <script src="./main.js"></script>
 </body>
