studied for teaching

--- a/js-easy/dice/index.html
+++ b/js-easy/dice/index.html
@@ -8,14 +8,13 @@
   </head>
 
   <body>
-    <!--<input
+    <!-- <input
             type="button"
             id="diceBtn"
             value="サイコロを振る"
-        />-->
+        /> -->
 
     <!-- 追加チャレンジ問題 -->
-
     <h1>サイコロゲーム</h1>
     <div>
       <input type="button" id="player1Btn" value="プレイヤー1" />
@@ -26,8 +25,8 @@
       <img id="setPlayer1dice" src="" alt="" />
       <img id="setPlayer2dice" src="" alt="" />
     </div>
-
     <!-- 追加チャレンジ問題ここまで -->
-    <script src="./main.js"></script>
+<!--<script src="./main2normal.js"></script> --normal-->
+<script src="./main5.js"></script><!--callenge-->
   </body>
 </html>
