--- a/js-hard/howmanydays/index.html
+++ b/js-hard/howmanydays/index.html
@@ -17,7 +17,7 @@
   <p id="diffTime"></p>
 
   <!-- チャレンジ問題 ここまで -->
-  <script src="./main.js"></script>
+  <script src="./main2.js"></script>
 </body>
 
 </html>
