--- a/js-normal/evolution/index.html
+++ b/js-normal/evolution/index.html
@@ -12,6 +12,6 @@
     <button id="setBtn">進化する...?!</button>
     <button id="resetBtn">リセット</button>
     <div id="showImg" class="img-wrap"></div>
-    <script src="./main.js"></script>
+    <script src="./main2.js"></script>
   </body>
 </html>
