--- a/js-hard/slotomachine_2/index.html
+++ b/js-hard/slotomachine_2/index.html
@@ -43,7 +43,7 @@
 		<input type="button" name="" id="setTime3" value="ストップ">
 		<input type="button" id="startTimer" value="スタート"></input>
 	</form>
-	<script src="./main.js"></script>
+	<script src="./main3.js"></script>
 </body>
 
 </html>
