--- a/js-normal/changePassword/index.html
+++ b/js-normal/changePassword/index.html
@@ -12,6 +12,6 @@
         <label>新しいパスワード<input type="text" value="" id="newPassword"></label>
         <input type="button" id="setPasswordBtn" value="変更"></input>
     </form>
-    <script src="./main.js"></script>
+    <script src="./main2.js"></script>
 </body>
 </html>
