--- a/js-normal/timer/index.html
+++ b/js-normal/timer/index.html
@@ -17,7 +17,7 @@
         <input type="button" id="stopTimer" value="ストップ"></input>
     </form>
     <p id="nowTime"></p>
-    <script src="./main.js"></script>
+    <script src="./main2.js"></script>
 </body>
 
 </html>
